[tool.poetry]
name = "pkg"
version = "0.1.0"
description = ""
authors = ["Martin Roy <martin@boostsecurity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
Pillow = "8.3.2" # 5 issues
Glances = "3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
